# vibeguard

./: .dockerignore  .gitattributes  .gitignore  .npmignore  .vibeguard-doc-paths-allowlist  AGENTS.md  AGENT_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FOLLOWUPS.md  LICENSE  README.md  README_CN.md  SECURITY.md  SPEC.md  deny.toml  index.js  index.ts  install-hook.sh  labels.yaml  package.json  rust-toolchain.toml  setup.sh  sgconfig.yml  skills-lock.json  spec.md  sprint-plan.json  states.yaml  tsconfig.json  workflow.yaml
crates/: Cargo.toml
crates/harness-cli/: Cargo.toml
crates/harness-core/: Cargo.toml
crates/harness-exec/: Cargo.toml
crates/harness-gc/: Cargo.toml
crates/harness-macros/: Cargo.toml
crates/harness-observe/: Cargo.toml
crates/harness-protocol/: Cargo.toml
crates/harness-rules/: Cargo.toml
crates/harness-server/: Cargo.toml
crates/harness-skills/: Cargo.toml
vibeguard-runtime/: Cargo.toml
vibeguard-runtime/benches/: core_us.rs
vibeguard-runtime/src/: active_constraints.rs  bash.rs  circuit_breaker.rs  codex_app_server.rs  codex_app_server_core.rs  codex_app_server_file_changes.rs  codex_app_server_hooks.rs  codex_app_server_missing_hook_tests.rs  codex_app_server_policy.rs  codex_app_server_profile_tests.rs  codex_app_server_scoped_suppression_tests.rs  codex_app_server_strategies.rs  codex_app_server_strategies_tests.rs  codex_hooks.rs  codex_hooks_adapter.rs  codex_hooks_diag.rs  config.rs  core_classifiers.rs  event_schema.rs  git_root.rs  hook_checks.rs  hook_checks_bash.rs  hook_checks_common.rs  (+50 more)
(+1039 files in other folders)
