[workspace]
resolver = "2"
members = [
    "harness-core",
    "harness-protocol",
    "harness-server",
    "harness-rules",
    "harness-skills",
    "harness-exec",
    "harness-observe",
    "harness-gc",
    "harness-cli",
    "harness-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
