[package]
name = "vibeguard-runtime"
version = "1.1.3"
edition = "2024"
description = "VibeGuard runtime — fast JSON/JSONL ops, hook metrics, and Codex app-server guards"

[dependencies]
serde_json = "1"
regex = "1"
libc = "0.2"
toml_edit = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
