[package]
name = "vibeguard-runtime"
version = "1.1.7"
edition = "2024"
description = "VibeGuard runtime — fast JSON/JSONL ops, hook metrics, and Codex app-server guards"

[dependencies]
serde_json = "1"
regex = "1"
libc = "0.2"
toml_edit = "0.22"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "core_us"
harness = false

[profile.release]
opt-level = "z"
lto = true
strip = true
